update note section headers

--- a/math-methods-chemical-engineering/notes/statistics/26-bonus-nonlinear-regression.ipynb
+++ b/math-methods-chemical-engineering/notes/statistics/26-bonus-nonlinear-regression.ipynb
@@ -13,11 +13,18 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Non-linear regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "n63PGfye9pig"
    },
    "source": [
-    "# Recap on linear regression\n",
+    "## Recap on linear regression\n",
     "\n",
     "Last class, we talked about how we could turn linear regression into a linear algebra problem\n",
     "- You can calculate this yourself\n",
