--- a/math-methods-chemical-engineering/notes/statistics/25-statistics-continue-linear-regression.ipynb
+++ b/math-methods-chemical-engineering/notes/statistics/25-statistics-continue-linear-regression.ipynb
@@ -12,6 +12,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Stats continued and linear regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
