update intro lecture

--- a/math-methods-chemical-engineering/notes/linear_algebra/1-intro-matrices.ipynb
+++ b/math-methods-chemical-engineering/notes/linear_algebra/1-intro-matrices.ipynb
@@ -6,7 +6,7 @@
     "id": "WJTsJKo4Wbsr"
    },
    "source": [
-    "# Introduction to math methods for ChE\n",
+    "# Introduction to math methods for ChE and motivation for linear algebra\n",
     "\n",
     "* The purpose of this course is to learn how to formulate and solve chemical engineering problems using analytical and numerical math methods.\n",
     "\n",
